--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -96,6 +96,8 @@
   <servlet-name>TranController</servlet-name>
   <url-pattern>/workbench/transaction/save.do</url-pattern>
   <url-pattern>/workbench/transaction/getCustomerName.do</url-pattern>
+  <url-pattern>/workbench/transaction/add.do</url-pattern>
+
  </servlet-mapping>
 
  </web-app>
