--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -97,6 +97,10 @@
   <url-pattern>/workbench/transaction/save.do</url-pattern>
   <url-pattern>/workbench/transaction/getCustomerName.do</url-pattern>
   <url-pattern>/workbench/transaction/add.do</url-pattern>
+  <url-pattern>/workbench/transaction/detail.do</url-pattern>
+  <url-pattern>/workbench/transaction/showHistoryListByTranId.do</url-pattern>
+
+
 
  </servlet-mapping>
 
