--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -100,6 +100,7 @@
   <url-pattern>/workbench/transaction/detail.do</url-pattern>
   <url-pattern>/workbench/transaction/showHistoryListByTranId.do</url-pattern>
   <url-pattern>/workbench/transaction/changeState.do</url-pattern>
+  <url-pattern>/workbench/transaction/getCharts.do</url-pattern>
 
 
 
