--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -133,7 +133,16 @@
   <url-pattern>/workbench/contacts/getUserListAndContacts.do</url-pattern>
   <url-pattern>/workbench/contacts/update.do</url-pattern>
   <url-pattern>/workbench/contacts/getUserList.do</url-pattern>
-  <url-pattern>/workbench/contacts/xxx.do</url-pattern>
+  <url-pattern>/workbench/contacts/detail.do</url-pattern>
+  <url-pattern>/workbench/contacts/showRemarkListByCid.do</url-pattern>
+  <url-pattern>/workbench/contacts/deleteRemark.do</url-pattern>
+  <url-pattern>/workbench/contacts/saveRemark.do</url-pattern>
+  <url-pattern>/workbench/contacts/updateRemark.do</url-pattern>
+  <url-pattern>/workbench/contacts/showActivityListByConid.do</url-pattern>
+  <url-pattern>/workbench/contacts/unbund.do</url-pattern>
+  <url-pattern>/workbench/contacts/showAcitivityListByNameExceptConid.do</url-pattern>
+  <url-pattern>/workbench/contacts/bund.do</url-pattern>
+  <url-pattern>/workbench/contacts/xxxx.do</url-pattern>
 
  </servlet-mapping>
 
