--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -115,6 +115,8 @@
   <url-pattern>/workbench/customer/saveRemark.do</url-pattern>
   <url-pattern>/workbench/customer/deleteRemark.do</url-pattern>
   <url-pattern>/workbench/customer/updateRemark.do</url-pattern>
+  <url-pattern>/workbench/customer/showTranListByCid.do</url-pattern>
+  <url-pattern>/workbench/customer/showContactsListByCid.do</url-pattern>
   <url-pattern>/workbench/customer/xxx.do</url-pattern>
 
  </servlet-mapping>
